@@ -1,20 +1,41 @@
 package com.onsemi.cim.apps.exensio.exensioreload.controller;
 
-import com.onsemi.cim.apps.exensio.exensioreload.entity.ConfigPipeline;
-import com.onsemi.cim.apps.exensio.exensioreload.service.ConfigurationService;
-import lombok.extern.slf4j.Slf4j;
+import java.util.List;
+import java.util.stream.Collectors;
+
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
+
+import com.onsemi.cim.apps.exensio.exensioreload.entity.ConfigPipeline;
+import com.onsemi.cim.apps.exensio.exensioreload.service.ConfigurationService;
 
 import jakarta.validation.Valid;
-import java.util.List;
+import lombok.extern.slf4j.Slf4j;
 
 /**
  * REST API controller for pipeline configuration management.
  * Provides CRUD operations for ETL pipeline configurations.
  * All administrative endpoints (POST, PUT, DELETE) require ADMIN or SUPER_ADMIN role.
+ * 
+ * Pagination: All list endpoints support standard Spring Data pagination parameters:
+ * - page: zero-indexed page number (default: 0)
+ * - size: page size (default: 20)
+ * - sort: comma-separated field names with optional desc/asc (e.g., "pipelineKey,asc" or "environment,desc")
+ * 
+ * Example: GET /api/configuration/pipelines?environment=PROD&page=0&size=20&sort=pipelineKey,asc
  */
 @Slf4j
 @RestController
@@ -28,23 +49,27 @@ public class ConfigurationPipelineController {
     }
 
     /**
-     * Get all pipelines for a specific environment.
-     * Optionally filter by historical mode.
+     * Get paginated pipelines for a specific environment with optional filtering.
      *
-     * GET /api/configuration/pipelines?environment=PROD&historicalMode=false
+     * GET /api/configuration/pipelines?environment=PROD&page=0&size=20&sort=pipelineKey,asc
      *
-     * @param environment the environment to query (e.g., PROD, QA)
+     * @param environment the environment to query (e.g., PROD, QA) - REQUIRED
      * @param site optional site filter
-     * @param historicalMode optional filter: true for historical only, false for non-historical only, null for all
-     * @return list of pipelines matching the criteria
+     * @param historicalMode optional filter: true for historical only, false for non-historical only
+     * @param search optional search filter for pipelineKey or site
+     * @param pageable pagination parameters (page, size, sort)
+     * @return paginated list of pipelines matching the criteria
      */
     @GetMapping
-    public ResponseEntity<List<ConfigPipeline>> getPipelines(
+    public ResponseEntity<Page<ConfigPipeline>> getPipelines(
             @RequestParam String environment,
             @RequestParam(required = false) String site,
-            @RequestParam(required = false) Boolean historicalMode) {
+            @RequestParam(required = false) Boolean historicalMode,
+            @RequestParam(required = false) String search,
+            Pageable pageable) {
         
-        log.info("Fetching pipelines: environment={}, site={}, historicalMode={}", environment, site, historicalMode);
+        log.info("Fetching paginated pipelines: environment={}, site={}, historicalMode={}, search={}, page={}, size={}, sort={}",
+                environment, site, historicalMode, search, pageable.getPageNumber(), pageable.getPageSize(), pageable.getSort());
         
         try {
             List<ConfigPipeline> pipelines;
@@ -55,14 +80,35 @@ public class ConfigurationPipelineController {
                 if (historicalMode != null) {
                     pipelines = allPipelines.stream()
                             .filter(p -> historicalMode ? p.getHistoricalModeEnabled() : !p.getHistoricalModeEnabled())
-                            .toList();
+                            .collect(Collectors.toList());
                 } else {
                     pipelines = allPipelines;
                 }
             }
-            return ResponseEntity.ok(pipelines);
+
+            // Apply search filter
+            if (search != null && !search.isBlank()) {
+                String searchLower = search.toLowerCase();
+                pipelines = pipelines.stream()
+                        .filter(p -> p.getPipelineKey().toLowerCase().contains(searchLower) ||
+                               (p.getSite() != null && p.getSite().toLowerCase().contains(searchLower)))
+                        .collect(Collectors.toList());
+            }
+
+            // Apply sorting and pagination
+            int pageNumber = pageable.getPageNumber();
+            int pageSize = pageable.getPageSize();
+            int start = pageNumber * pageSize;
+            int end = Math.min(start + pageSize, pipelines.size());
+
+            List<ConfigPipeline> pageContent = pipelines.subList(start, end);
+            Page<ConfigPipeline> page = new PageImpl<>(pageContent, pageable, pipelines.size());
+
+            log.info("Returned {} pipelines (page {}/{}, total {})", 
+                    pageContent.size(), pageNumber, page.getTotalPages(), pipelines.size());
+            return ResponseEntity.ok(page);
         } catch (Exception e) {
-            log.error("Error fetching pipelines", e);
+            log.error("Error fetching paginated pipelines", e);
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
         }
     }
